[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/robot_with_head.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Scripts/Clients.gd" type="Script" id=2]
[ext_resource path="res://Assets/Pixellari.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 27
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=21]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Haircut1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Haircut1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Haircut1:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=23]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Haircut1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Node2D" type="Node2D" groups=["deletable"]]
script = ExtResource( 2 )

[node name="Haircut1" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -33, 67 )
texture = ExtResource( 1 )
hframes = 2

[node name="HaircutImage" type="ColorRect" parent="Haircut1"]
visible = false
margin_left = -143.0
margin_top = 28.0
margin_right = -103.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 71.0
margin_top = -70.0
margin_right = 523.0
margin_bottom = -44.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 110
custom_fonts/font = SubResource( 1 )
text = "TEST TEXT LONG TEXT TO TEST HERE"
align = 1
valign = 1
uppercase = true

[node name="Robot_animation" type="AnimationPlayer" parent="."]
autoplay = "Talking"
anims/Greetings = SubResource( 21 )
anims/RESET = SubResource( 22 )
anims/Talking = SubResource( 23 )

[node name="GiveUpCountdown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="GiveUpCountdown" to="." method="_on_GiveUpCountdown_timeout"]
